test/expected/explain_rtf_v-error.out
explain void f() restrict
                 ^
18: syntax error: "restrict": unexpected token ("restrict" is a keyword)
declare f as function returning void
